--- a/maintenance.html
+++ b/maintenance.html
@@ -230,7 +230,7 @@
     <!-- End Header Area -->
 
     <!-- Start Page Title Area -->
-    <!-- <div class="page-title-area bg-2">
+    <!-- <div class="page-title-area">
         <div class="container">
             <div class="page-title-content">
                 <h2>Maintenance</h2>
@@ -239,7 +239,7 @@
                         <a href="index.html">
 								Home 
 							</a>
-                    </li>
+                    </li>   
                     <li class="active">Maintenance</li>
                 </ul>
             </div>
@@ -317,9 +317,53 @@
                     </div>
                 </div>
 
-                <div class="col-lg-6">
-                    <div class="faq-img">
-                        <img src="assets/img/about-img.jpg" alt="Image">
+                <div class="col-lg-4">
+                    <div class="services-sidebar ">
+                        <div class="services-category ">
+                            <ul>
+                                <li>
+                                    <a href="#">
+											Green to Clean	
+											<i class="bx bx-chevron-right "></i>
+										</a>
+                                </li>
+                                <li>
+                                    <a href="oneanddone.html">
+											One and Done	
+											<i class="bx bx-chevron-right "></i>
+										</a>
+                                </li>
+                                <li>
+                                    <a href="sand-filter.html">
+										Sand Filter Changes
+											<i class="bx bx-chevron-right "></i>
+										</a>
+                                </li>
+                                <li>
+                                    <a href="maintenance.html">
+										Maintenance
+											<i class="bx bx-chevron-right "></i>
+										</a>
+                                </li>
+                                <li>
+                                    <a href="openandclose.html">
+										Openings and Closings
+											<i class="bx bx-chevron-right "></i>
+										</a>
+                                </li>
+                                <li>
+                                    <a href="deckcleaning.html">
+										Deck Pressure Washing	
+											<i class="bx bx-chevron-right "></i>
+										</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <a href="contact.html ">
+                            <button class="default-btn " style="background-color: #ff8c00; display:block; ">
+							<span>Contact Us</span>
+						</button>
+                        </a>
                     </div>
                 </div>
             </div>
