--- a/deckcleaning.html
+++ b/deckcleaning.html
@@ -174,7 +174,7 @@
                                                 <a href="openandclose.html" class="nav-link">Openings and Closings</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="deckcleaning.html" class="nav-link">Deck Pressure Washing</a>
+                                                <a href="deckcleaning.html" class="nav-link">Pressure Washing</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -309,9 +309,9 @@
 
 
                         <div class="services-contents">
-                            <h2>Deck Cleaning</h2>
+                            <h2>Need some pressure washing done?</h2>
                             <br>
-                            <p>Make sure your pool deck is clean with our pressure washing services that will leave your pool deck sparkling. Your pool deck is not only the backdrop for the entire pool but the immediate area around your swimming pool. This
+                            <p>Our friends over at <a href="https://931washing.com" target="_blank"><strong>Clarksville Pressure Washing</strong></a> will make sure your pool deck is clean. Your pool deck is not only the backdrop for the entire pool but the immediate area around your swimming pool. This
                                 is also many times called your pool patio and where most family members and friends spend the majority of their time lounging on lounge chairs or sitting by the pool.
                             </p>
 
@@ -320,10 +320,7 @@
                             <img src="assets/img/services/dirtydeckjpg.jpg" alt="Dirty Deck" style="padding-top: 35px; max-width: 500px;">
                         </div>
 
-                        <div class="services-contents" style="padding-top: 100px;">
-                            <h3>Schedule your green to clean service today!</h3>
-                            <p>You can reach out to us <a href="contact.html " style="color:orange; ">here</a> with any questions and concerns you have, or set up an appointment.</p>
-                        </div>
+                        
                     </div>
                 </div>
 
@@ -363,17 +360,21 @@
                                 </li>
                                 <li>
                                     <a href="deckcleaning.html">
-										Deck Pressure Washing	
+										Pressure Washing	
 											<i class="bx bx-chevron-right "></i>
 										</a>
                                 </li>
                             </ul>
                         </div>
-                        <a href="contact.html ">
+                        <a href="https://931washing.com " target="_blank">
                             <button class="default-btn " style="background-color: #ff8c00; display:block; ">
-							<span>Contact Us</span>
+							<span>Clarksville Pressure Washing</span>
 						</button>
                         </a>
+                        <div class="services-contents" style="padding-top: 100px;">
+                            <h3>Schedule your green to clean service today!</h3>
+                            <p>You can reach out to us <a href="contact.html " style="color:orange; ">here</a> with any questions and concerns you have, or set up an appointment.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -414,7 +415,7 @@
                                 <a href="# ">Openings and Closings</a>
                             </li>
                             <li style="text-align:center; ">
-                                <a href="# ">Deck Pressure Washing</a>
+                                <a href="# ">Pressure Washing</a>
                             </li>
 
                         </ul>
