--- a/greentoclean.html
+++ b/greentoclean.html
@@ -174,7 +174,7 @@
                                                 <a href="openandclose.html" class="nav-link">Openings and Closings</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="deckcleaning.html" class="nav-link">Deck Pressure Washing</a>
+                                                <a href="deckcleaning.html" class="nav-link">Pressure Washing</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -320,10 +320,7 @@
                             <img src="assets/img/services/green-pool2.png" alt="Green Pool" style="padding-top: 35px;">
                         </div>
 
-                        <div class="services-contents" style="padding-top: 100px;">
-                            <h3>Schedule your green to clean service today!</h3>
-                            <p>You can reach out to us <a href="contact.html " style="color:orange; ">here</a> with any questions and concerns you have, or set up an appointment.</p>
-                        </div>
+                        
                     </div>
                 </div>
 
@@ -363,7 +360,7 @@
                                 </li>
                                 <li>
                                     <a href="deckcleaning.html">
-										Deck Pressure Washing	
+										Pressure Washing	
 											<i class="bx bx-chevron-right "></i>
 										</a>
                                 </li>
@@ -374,6 +371,10 @@
 							<span>Contact Us</span>
 						</button>
                         </a>
+                        <div class="services-contents" style="padding-top: 100px;">
+                            <h3>Schedule your green to clean service today!</h3>
+                            <p>You can reach out to us <a href="contact.html " style="color:orange; ">here</a> with any questions and concerns you have, or set up an appointment.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -414,7 +415,7 @@
                                 <a href="# ">Openings and Closings</a>
                             </li>
                             <li style="text-align:center; ">
-                                <a href="# ">Deck Pressure Washing</a>
+                                <a href="# ">Pressure Washing</a>
                             </li>
 
                         </ul>
