--- a/oneanddone.html
+++ b/oneanddone.html
@@ -174,7 +174,7 @@
                                                 <a href="openandclose.html" class="nav-link">Openings and Closings</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="deckcleaning.html" class="nav-link">Deck Pressure Washing</a>
+                                                <a href="deckcleaning.html" class="nav-link">Pressure Washing</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -309,7 +309,7 @@
 
 
                         <div class="services-contents">
-                            <h2>One and Done</h2>
+                            <h2>One and Done Cleanings</h2>
                             <br>
                             <p>Give your pool the extra attention it needs. We can help you get your pool back into shape with a comprehensive one-time pool service. It's fast and easy to book a local pool technician to come to your home and ensure your
                                 pool is healthy. Is your pool looking a little lackluster? Do you have a special occasion coming up and need your pool looking its best? Maybe you just don’t have enough time to give your pool the TLC it needs?
@@ -318,11 +318,6 @@
                             <p>Depending on the condition of your pool, your one-time clean may be completed in a day or it may require several visits to get things back in shape. Whatever your needs may be, our professional pool maintenance technicians
                                 utilise proven techniques to get things turned around quickly and effectively. This lets you and your family get back to what matters most…enjoying your pool!</p>
                             <img src="assets/img/services/cleanpool.webp" alt="Dirty Deck" style="padding-top: 35px; max-width: 500px;">
-                        </div>
-
-                        <div class="services-contents" style="padding-top: 100px;">
-                            <h3>Schedule your one and done cleaning today!</h3>
-                            <p>You can reach out to us <a href="contact.html " style="color:orange; ">here</a> with any questions and concerns you have, or set up an appointment.</p>
                         </div>
                     </div>
                 </div>
@@ -363,7 +358,7 @@
                                 </li>
                                 <li>
                                     <a href="deckcleaning.html">
-										Deck Pressure Washing	
+										Pressure Washing	
 											<i class="bx bx-chevron-right "></i>
 										</a>
                                 </li>
@@ -374,6 +369,10 @@
 							<span>Contact Us</span>
 						</button>
                         </a>
+                        <div class="services-contents" style="padding-top: 100px;">
+                            <h3>Schedule your one and done cleaning today!</h3>
+                            <p>You can reach out to us <a href="contact.html " style="color:orange; ">here</a> with any questions and concerns you have, or set up an appointment.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -414,7 +413,7 @@
                                 <a href="# ">Openings and Closings</a>
                             </li>
                             <li style="text-align:center; ">
-                                <a href="# ">Deck Pressure Washing</a>
+                                <a href="# ">Pressure Washing</a>
                             </li>
 
                         </ul>
