--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -174,7 +174,7 @@
                                                 <a href="openandclose.html" class="nav-link">Openings and Closings</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="deckcleaning.html" class="nav-link">Deck Pressure Washing</a>
+                                                <a href="deckcleaning.html" class="nav-link">Pressure Washing</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -326,7 +326,7 @@
                                             <a href="openandclose.html" class="nav-link">Openings and Closings</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="deckcleaning.html" class="nav-link">Deck Pressure Washing</a>
+                                            <a href="deckcleaning.html" class="nav-link">Pressure Washing</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -566,7 +566,7 @@
                                 <a href="#">Openings and Closings</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Deck Pressure Washing</a>
+                                <a href="#">Pressure Washing</a>
                             </li>
 
                         </ul>
