--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@
                                                 <a href="openandclose.html" class="nav-link">Openings and Closings</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="deckcleaning.html" class="nav-link">Deck Pressure Washing</a>
+                                                <a href="deckcleaning.html" class="nav-link">Pressure Washing</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -517,7 +517,7 @@
                                 <a href="#">Openings and Closings</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Deck Pressure Washing</a>
+                                <a href="#">Pressure Washing</a>
                             </li>
                         </ul>
                     </div>
