--- a/maintenance.html
+++ b/maintenance.html
@@ -174,7 +174,7 @@
                                                 <a href="openandclose.html" class="nav-link">Openings and Closings</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="deckcleaning.html" class="nav-link">Deck Pressure Washing</a>
+                                                <a href="deckcleaning.html" class="nav-link">Pressure Washing</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -317,7 +317,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4">
+                <div class="col-lg-4" style="margin-left: 150px;">
                     <div class="services-sidebar ">
                         <div class="services-category ">
                             <ul>
@@ -353,7 +353,7 @@
                                 </li>
                                 <li>
                                     <a href="deckcleaning.html">
-										Deck Pressure Washing	
+										Pressure Washing	
 											<i class="bx bx-chevron-right "></i>
 										</a>
                                 </li>
@@ -364,6 +364,7 @@
 							<span>Contact Us</span>
 						</button>
                         </a>
+                        
                     </div>
                 </div>
             </div>
@@ -412,7 +413,7 @@
                                 <a href="#">Openings and Closings</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Deck Pressure Washing</a>
+                                <a href="#">Pressure Washing</a>
                             </li>
 
                         </ul>
