--- a/sand-filter.html
+++ b/sand-filter.html
@@ -174,7 +174,7 @@
                                                 <a href="openandclose.html" class="nav-link">Openings and Closings</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="deckcleaning.html" class="nav-link">Deck Pressure Washing</a>
+                                                <a href="deckcleaning.html" class="nav-link">Pressure Washing</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -316,7 +316,7 @@
                                 your pool filter often all year and have a heavy bather load, the sand may need replacing sooner than three years.
                             </p>
 
-                            <h2>How to tell if your pool sand needs replacing</h2>
+                            <h3 style="margin-bottom: -5px;">When to replace your sand</h3>
                             <br>
                             <p>A sand filter is a pressure vessel, essentially a tank filled with sand. Water is applied under pressure from the pump and forced through graded sand which removes all but the smallest physical debris before the water is collected
                                 clean on the other side of the sand and continues on through your plumbing system and back to your pool. If your pool's backwashing cycles have become shorter, then you should check to see if the sand filter is dirty or
@@ -326,10 +326,7 @@
                             <img src="assets/img/services/filter-sand-filter.jpg" alt="Sand Filter" style="padding-top: 35px; max-width: 500px;">
                         </div>
 
-                        <div class="services-contents" style="padding-top: 100px;">
-                            <h3>Schedule us to take a look at your sand today!</h3>
-                            <p>You can reach out to us <a href="contact.html " style="color:orange; ">here</a> with any questions and concerns you have, or set up an appointment.</p>
-                        </div>
+                        
                     </div>
                 </div>
 
@@ -369,7 +366,7 @@
                                 </li>
                                 <li>
                                     <a href="deckcleaning.html">
-										Deck Pressure Washing	
+										Pressure Washing	
 											<i class="bx bx-chevron-right "></i>
 										</a>
                                 </li>
@@ -380,6 +377,10 @@
 							<span>Contact Us</span>
 						</button>
                         </a>
+                        <div class="services-contents" style="padding-top: 100px;">
+                            <h3>Schedule us to take a look at your sand today!</h3>
+                            <p>You can reach out to us <a href="contact.html " style="color:orange; ">here</a> with any questions and concerns you have, or set up an appointment.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -420,7 +421,7 @@
                                 <a href="# ">Openings and Closings</a>
                             </li>
                             <li style="text-align:center; ">
-                                <a href="# ">Deck Pressure Washing</a>
+                                <a href="# ">Pressure Washing</a>
                             </li>
 
                         </ul>
