--- a/deckcleaning.html
+++ b/deckcleaning.html
@@ -372,8 +372,8 @@
 						</button>
                         </a>
                         <div class="services-contents" style="padding-top: 100px;">
-                            <h3>Schedule your green to clean service today!</h3>
-                            <p>You can reach out to us <a href="contact.html " style="color:orange; ">here</a> with any questions and concerns you have, or set up an appointment.</p>
+                            <h3>Schedule your pressure wash today!</h3>
+                            <p>You can reach out to our friends over at <a href="contact.html " style="color:orange; ">Clarksville Pressure Washing</a> with any questions and concerns you have, or set up an appointment.</p>
                         </div>
                     </div>
                 </div>
