--- a/oneanddone.html
+++ b/oneanddone.html
@@ -327,13 +327,13 @@
                         <div class="services-category ">
                             <ul>
                                 <li>
-                                    <a href="#">
+                                    <a href="greentoclean.html">
 											Green to Clean	
 											<i class="bx bx-chevron-right "></i>
 										</a>
                                 </li>
                                 <li>
-                                    <a href="oneanddone.html">
+                                    <a href="#">
 											One and Done	
 											<i class="bx bx-chevron-right "></i>
 										</a>
