no more dead links

--- a/index.html
+++ b/index.html
@@ -73,51 +73,6 @@
                         </ul>
                     </div>
 
-                    <!-- <div class="col-lg-6 col-sm-6">
-							<div class="header-right-content">
-								<ul class="flag-area">
-									<li class="flag-item-top">
-										<a href="#" class="flag-bar">
-											<span>Language</span>
-											<i class="bx bx-chevron-down"></i>
-										</a>
-
-										<ul class="flag-item-bottom">
-											<li class="flag-item">
-												<a href="#" class="flag-link">
-													<img src="assets/img/flag/english.png" alt="Image">
-													English
-												</a>
-											</li>
-											<li class="flag-item">
-												<a href="#" class="flag-link">
-													<img src="assets/img/flag/arab.png" alt="Image">
-													العربيّة
-												</a>
-											</li>
-											<li class="flag-item">
-												<a href="#" class="flag-link">
-													<img src="assets/img/flag/germany.png" alt="Image">
-													Deutsch
-												</a>
-											</li>
-											<li class="flag-item">
-												<a href="#" class="flag-link">
-													<img src="assets/img/flag/portugal.png" alt="Image">
-													󠁥󠁮󠁧󠁿Português
-												</a>
-											</li>
-											<li class="flag-item">
-												<a href="#" class="flag-link">
-													<img src="assets/img/flag/china.png" alt="Image">
-													简体中文
-												</a>
-											</li>
-										</ul>
-									</li>
-								</ul>
-							</div>
-						</div> -->
                 </div>
             </div>
         </div>
@@ -374,88 +329,7 @@
     <!-- End About Area -->
 
     <!-- Start Partner Area -->
-    <!-- <div class="partner-area bg-color ptb-100">
-			<div class="container">
-				<div class="partner-slider owl-theme owl-carousel">
-					<div class="partner-item">
-						<a href="#">
-							<img src="assets/img/partner/partner-1.png" alt="Image">
-						</a>
-					</div>
 
-					<div class="partner-item">
-						<a href="#">
-							<img src="assets/img/partner/partner-2.png" alt="Image">
-						</a>
-					</div>
-
-					<div class="partner-item">
-						<a href="#">
-							<img src="assets/img/partner/partner-3.png" alt="Image">
-						</a>
-					</div>
-
-					<div class="partner-item">
-						<a href="#">
-							<img src="assets/img/partner/partner-4.png" alt="Image">
-						</a>
-					</div>
-
-					<div class="partner-item">
-						<a href="#">
-							<img src="assets/img/partner/partner-5.png" alt="Image">
-						</a>
-					</div>
-				</div>
-			</div>
-		</div> -->
-    <!-- End Partner Area -->
-
-    <!-- Start Pool Covers Area -->
-    <!-- <section class="pool-covers-area">
-			<div class="container-fluid p-0">
-				<div class="row">
-					<div class="col-lg-4 col-sm-6 p-0">
-						<div class="pool-covers-item">
-							<img src="assets/img/pool-covers/pool-cover-1.jpg" alt="Image">
-							<div class="pool-covers-content">
-								<h3>
-									<a href="#">
-										Pool construction
-									</a>
-								</h3>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-sm-6 p-0">
-						<div class="pool-covers-item">
-							<img src="assets/img/pool-covers/pool-cover-2.jpg" alt="Image">
-							<div class="pool-covers-content">
-								<h3>
-									<a href="#">
-										Pool maintenance
-									</a>
-								</h3>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-sm-6 offset-sm-3 offset-lg-0 p-0">
-						<div class="pool-covers-item">
-							<img src="assets/img/pool-covers/pool-cover-3.jpg" alt="Image">
-							<div class="pool-covers-content">
-								<h3>
-									<a href="#">
-										Pool covers
-									</a>
-								</h3>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section> -->
     <!-- End Pool Covers Area -->
 
     <!-- Start Our Services Area -->
@@ -791,46 +665,27 @@
 
                         <ul class="import-link">
                             <li style="text-align:center;">
-                                <a href="#" style="text-align:center;">Green To Clean</a>
+                                <a href="greentoclean.html" style="text-align:center;">Green To Clean</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">One and Done</a>
+                                <a href="oneanddone.html">One and Done</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Sand Filter Changes</a>
+                                <a href="sand-filter.html">Sand Filter Changes</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Maintenance</a>
+                                <a href="maintenance.html">Maintenance</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Openings and Closings</a>
+                                <a href="openandclose.html">Openings and Closings</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Pressure Washing</a>
+                                <a href="deckcleaning.html">Pressure Washing</a>
                             </li>
 
                         </ul>
                     </div>
                 </div>
-
-                <!-- <div class="col-lg-3 col-md-6">
-                    <div class="single-footer-widget">
-                        <h3 style="text-align:center; color:#201f25;">.</h3>
-
-                        <ul class="import-link">
-                            <li style="text-align:center;">
-                                <a href="#">Maintenance</a>
-                            </li>
-                            <li style="text-align:center;">
-                                <a href="#">Openings and Closings</a>
-                            </li>
-                            <li style="text-align:center;">
-                                <a href="#">Deck Pressure Washing</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div> -->
-
 
                 <div class="col-lg-3 col-md-6">
                     <div class="single-footer-widget">
