--- a/openandclose.html
+++ b/openandclose.html
@@ -329,7 +329,7 @@
                             <div class="services-category ">
                                 <ul>
                                     <li>
-                                        <a href="#">
+                                        <a href="greentoclean.html">
                                                 Green to Clean	
                                                 <i class="bx bx-chevron-right "></i>
                                             </a>
@@ -353,7 +353,7 @@
                                             </a>
                                     </li>
                                     <li>
-                                        <a href="openandclose.html">
+                                        <a href="#">
                                             Openings and Closings
                                                 <i class="bx bx-chevron-right "></i>
                                             </a>
@@ -400,45 +400,28 @@
 
                         <ul class="import-link">
                             <li style="text-align:center;">
-                                <a href="#" style="text-align:center;">Green To Clean</a>
+                                <a href="greentoclean.html" style="text-align:center;">Green To Clean</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">One and Done</a>
+                                <a href="oneanddone.html">One and Done</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Sand Filter Changes</a>
+                                <a href="sand-filter.html">Sand Filter Changes</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Maintenance</a>
+                                <a href="maintenance.html">Maintenance</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Openings and Closings</a>
+                                <a href="openandclose.html">Openings and Closings</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Pressure Washing</a>
+                                <a href="deckcleaning.html">Pressure Washing</a>
                             </li>
 
                         </ul>
                     </div>
                 </div>
 
-                <!-- <div class="col-lg-3 col-md-6">
-                    <div class="single-footer-widget">
-                        <h3 style="text-align:center; color:#201f25;">.</h3>
-
-                        <ul class="import-link">
-                            <li style="text-align:center;">
-                                <a href="#">Maintenance</a>
-                            </li>
-                            <li style="text-align:center;">
-                                <a href="#">Openings and Closings</a>
-                            </li>
-                            <li style="text-align:center;">
-                                <a href="#">Deck Pressure Washing</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div> -->
 
 
                 <div class="col-lg-3 col-md-6">
