--- a/services.html
+++ b/services.html
@@ -73,51 +73,6 @@
                         </ul>
                     </div>
 
-                    <!-- <div class="col-lg-6 col-sm-6">
-									<div class="header-right-content">
-										<ul class="flag-area">
-											<li class="flag-item-top">
-												<a href="#" class="flag-bar">
-													<span>Language</span>
-													<i class="bx bx-chevron-down"></i>
-												</a>
-		
-												<ul class="flag-item-bottom">
-													<li class="flag-item">
-														<a href="#" class="flag-link">
-															<img src="assets/img/flag/english.png" alt="Image">
-															English
-														</a>
-													</li>
-													<li class="flag-item">
-														<a href="#" class="flag-link">
-															<img src="assets/img/flag/arab.png" alt="Image">
-															العربيّة
-														</a>
-													</li>
-													<li class="flag-item">
-														<a href="#" class="flag-link">
-															<img src="assets/img/flag/germany.png" alt="Image">
-															Deutsch
-														</a>
-													</li>
-													<li class="flag-item">
-														<a href="#" class="flag-link">
-															<img src="assets/img/flag/portugal.png" alt="Image">
-															󠁥󠁮󠁧󠁿Português
-														</a>
-													</li>
-													<li class="flag-item">
-														<a href="#" class="flag-link">
-															<img src="assets/img/flag/china.png" alt="Image">
-															简体中文
-														</a>
-													</li>
-												</ul>
-											</li>
-										</ul>
-									</div>
-								</div> -->
                 </div>
             </div>
         </div>
@@ -468,45 +423,29 @@
 
                         <ul class="import-link">
                             <li style="text-align:center;">
-                                <a href="#" style="text-align:center;">Green To Clean</a>
+                                <a href="greentoclean.html" style="text-align:center;">Green To Clean</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">One and Done</a>
+                                <a href="oneanddone.html">One and Done</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Sand Filter Changes</a>
+                                <a href="sand-filter.html">Sand Filter Changes</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Maintenance</a>
+                                <a href="maintenance.html">Maintenance</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Openings and Closings</a>
+                                <a href="openandclose.html">Openings and Closings</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Pressure Washing</a>
+                                <a href="deckcleaning.html">Pressure Washing</a>
                             </li>
 
                         </ul>
                     </div>
                 </div>
 
-                <!-- <div class="col-lg-3 col-md-6">
-                    <div class="single-footer-widget">
-                        <h3 style="text-align:center; color:#201f25;">.</h3>
 
-                        <ul class="import-link">
-                            <li style="text-align:center;">
-                                <a href="#">Maintenance</a>
-                            </li>
-                            <li style="text-align:center;">
-                                <a href="#">Openings and Closings</a>
-                            </li>
-                            <li style="text-align:center;">
-                                <a href="#">Deck Pressure Washing</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div> -->
 
 
                 <div class="col-lg-3 col-md-6">
