--- a/deckcleaning.html
+++ b/deckcleaning.html
@@ -34,7 +34,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <!-- Title -->
-    <title>Deck Cleaning</title>
+    <title>Pressure Washing</title>
 </head>
 
 <body>
@@ -73,51 +73,7 @@
                         </ul>
                     </div>
 
-                    <!-- <div class="col-lg-6 col-sm-6">
-								<div class="header-right-content">
-									<ul class="flag-area">
-										<li class="flag-item-top">
-											<a href="#" class="flag-bar">
-												<span>Language</span>
-												<i class="bx bx-chevron-down"></i>
-											</a>
-	
-											<ul class="flag-item-bottom">
-												<li class="flag-item">
-													<a href="#" class="flag-link">
-														<img src="assets/img/flag/english.png" alt="Image">
-														English
-													</a>
-												</li>
-												<li class="flag-item">
-													<a href="#" class="flag-link">
-														<img src="assets/img/flag/arab.png" alt="Image">
-														العربيّة
-													</a>
-												</li>
-												<li class="flag-item">
-													<a href="#" class="flag-link">
-														<img src="assets/img/flag/germany.png" alt="Image">
-														Deutsch
-													</a>
-												</li>
-												<li class="flag-item">
-													<a href="#" class="flag-link">
-														<img src="assets/img/flag/portugal.png" alt="Image">
-														󠁥󠁮󠁧󠁿Português
-													</a>
-												</li>
-												<li class="flag-item">
-													<a href="#" class="flag-link">
-														<img src="assets/img/flag/china.png" alt="Image">
-														简体中文
-													</a>
-												</li>
-											</ul>
-										</li>
-									</ul>
-								</div>
-							</div> -->
+               
                 </div>
             </div>
         </div>
@@ -329,7 +285,7 @@
                         <div class="services-category ">
                             <ul>
                                 <li>
-                                    <a href="#">
+                                    <a href="greentoclean.html">
 											Green to Clean	
 											<i class="bx bx-chevron-right "></i>
 										</a>
@@ -359,7 +315,7 @@
 										</a>
                                 </li>
                                 <li>
-                                    <a href="deckcleaning.html">
+                                    <a href="#">
 										Pressure Washing	
 											<i class="bx bx-chevron-right "></i>
 										</a>
