--- a/services-details.html
+++ b/services-details.html
@@ -335,37 +335,37 @@
                         <div class="services-category">
                             <ul>
                                 <li>
-                                    <a href="#">
+                                    <a href="greentoclean.html">
 											Green to Clean	
 											<i class="bx bx-chevron-right"></i>
 										</a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="oneanddone.html">
 											One and Done	
 											<i class="bx bx-chevron-right"></i>
 										</a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="sand-filter.html">
 										Sand Filter Changes
 											<i class="bx bx-chevron-right"></i>
 										</a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="maintenance.html">
 										Maintenance
 											<i class="bx bx-chevron-right"></i>
 										</a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="openandclose.html">
 										Openings and Closings
 											<i class="bx bx-chevron-right"></i>
 										</a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="deckcleaning.html">
 										Pressure Washing	
 											<i class="bx bx-chevron-right"></i>
 										</a>
@@ -403,45 +403,29 @@
 
                         <ul class="import-link">
                             <li style="text-align:center;">
-                                <a href="#" style="text-align:center;">Green To Clean</a>
+                                <a href="greentoclean.html" style="text-align:center;">Green To Clean</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">One and Done</a>
+                                <a href="oneanddone.html">One and Done</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Sand Filter Changes</a>
+                                <a href="sand-filter.html">Sand Filter Changes</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Maintenance</a>
+                                <a href="maintenance.html">Maintenance</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Openings and Closings</a>
+                                <a href="openandclose.html">Openings and Closings</a>
                             </li>
                             <li style="text-align:center;">
-                                <a href="#">Pressure Washing</a>
+                                <a href="deckcleaning.html">Pressure Washing</a>
                             </li>
 
                         </ul>
                     </div>
                 </div>
 
-                <!-- <div class="col-lg-3 col-md-6">
-                    <div class="single-footer-widget">
-                        <h3 style="text-align:center; color:#201f25;">.</h3>
 
-                        <ul class="import-link">
-                            <li style="text-align:center;">
-                                <a href="#">Maintenance</a>
-                            </li>
-                            <li style="text-align:center;">
-                                <a href="#">Openings and Closings</a>
-                            </li>
-                            <li style="text-align:center;">
-                                <a href="#">Deck Pressure Washing</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div> -->
 
 
                 <div class="col-lg-3 col-md-6">
