updated home page, removed stress free summer package

--- a/index.html
+++ b/index.html
@@ -393,14 +393,14 @@
                                 <span class="flaticon-temperature-control"></span>
                                 <h3>
                                     <a href="maintenance.html">
-                      Stress Free Summer
+                                        Weekly Maintenance
 										</a>
                                 </h3>
 
-                                <p>Never want to worry about the pool for the season? This package includes pool opening, pool closing and weekly maintenance to insure that your pool is always clear!
+                                <p>We will come out to your pool weekly and make sure it's looking amazing. We will vacuum, add chemicals, brush, etc. if it's needed every week!
                                 </p>
 
-                                <a href="service-details.html" class="read-more">
+                                <a href="maintenance.html" class="read-more">
 										Read more
 										<i class="flaticon-right-arrow"></i>
 									</a>
@@ -418,7 +418,7 @@
 
                                 <p>Do you need your pool deck cleaned? We can powerwash your pool deck and pool tiles to make sure everything is completely clean in and around your pool!</p>
 
-                                <a href="service-details.html" class="read-more">
+                                <a href="deckcleaning.html" class="read-more">
 										Read more
 										<i class="flaticon-right-arrow"></i>
 									</a>
@@ -469,7 +469,7 @@
     <!-- End Testimonial Area -->
 
     <!-- Start Gallery Area -->
-    <section class="gallery-area gallery-popup ptb-100">
+    <!-- <section class="gallery-area gallery-popup ptb-100">
         <div class="container">
             <div class="section-title left-title">
                 <span>Our gallery</span>
@@ -516,7 +516,7 @@
         <div class="shape gallery-shape-2">
             <img src="assets/img/gallery/gallery-shape-2.png" alt="Image">
         </div>
-    </section>
+    </section> -->
     <!-- End Gallery Area -->
 
     <!-- Start We Are Area -->
