--- a/maintenance.html
+++ b/maintenance.html
@@ -215,7 +215,7 @@
                         </div>
 
                         <ul class="accordion">
-                            <li class="accordion-item">
+                            <!-- <li class="accordion-item">
                                 <a class="accordion-title active" href="javascript:void(0)">
                                     <i class="bx bx-plus">
 
@@ -223,7 +223,7 @@
                                 </a>
 
                                 <div class="accordion-content show">
-                                    <p>This is an all inclusive package. We will take care of your summer from TIME PERIOD until TIME PERIOD when it's time to close for the winter. We will make sure to come out weekly to verify it is looking the abolsute
+                                    <p>This is an all inclusive package. We will take care of your pool in the summer from TIME PERIOD until TIME PERIOD when it's time to close for the winter. We will make sure to come out weekly to verify it is looking the absolute
                                         best. You will never have to worry about your pool for the entire summer!
                                     </p>
                                     <br>
@@ -234,7 +234,7 @@
                                     </a>
                                 </div>
 
-                            </li>
+                            </li> -->
 
                             <li class="accordion-item">
                                 <a class="accordion-title" href="javascript:void(0)">
